--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>Teste</title>
 </head>
 <body>
-    <p>Criado para ver se consigo mandar o site no ar ar sozinha.</p>
+    <h1>Relatório 45 de 2025</h1>
+    <H3>Empresa:Sdoca</H3>
+    <h3>Data:26/11/2026</h3>
+    <h3>Nome:Valéria Durão</h3>
+    <h2> Introdução</h2>
+    <p>No linux usamos o terminal pra instalar alguns aplicativos , para acessarmos algumas páginas e não só.</p>
+    <ul type="circle">
+        <li> .deb-extensão usada apenas no linux</li>
+    </ul>
+    <h2> Instalação do git</h2>
+    <p> instalamos o git no terminal, acessamos o site do git e baixamos a versão pro linux(alguns aplicativos no linus não instala-se direito) copiamos o código do site, <br>
+    e colamos no terminal deu erro porque não executamos como administrador(para executarmos como administrador antes do código temos que usar o "sudo") depois copiarmos <br>
+    o segundo código e executamos,demos continuidade e verificamos a instalação(git -v).</p>
+   <h2>Instalação do Vs code </h2>
+   <p>Depois de irmos ao site e baixarmos o pacote de Instalação, demos continuidade na instalação no terminal.Para  instalar usamos o "cd" e a inicial da pasta em que <br>
+   se encontrava o pacote de instalação, com a pasta acessada usamos o código "dpkg -i"(código de instalação para os pacotes .deb)</p>
+    <h2>Instalação do Mysql</h2>
+    <p>copiamos o código de instalação(a partir do site) para executarmos no terminal usamos o "sudo mysql" depois de executado usamos o "show databases para nos mostrar as
+    as bases de dados existentes" por fim criamos uma base de dados usando o comando create databases.<br></p>
 </body>
 </html>
