--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Teste</title>
 </head>
 <body>
+    <a href="zindex.html">acessa</a>
+
     <h1>Relatório 45 de 2025</h1>
     <H3>Empresa:Sdoca</H3>
     <h3>Data:26/11/2026</h3>
