adicionei um parágrafo

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <h2>Instalação do Mysql</h2>
     <p>copiamos o código de instalação(a partir do site) para executarmos no terminal usamos o "sudo mysql" depois de executado usamos o "show databases para nos mostrar as
     as bases de dados existentes" por fim criamos uma base de dados usando o comando create databases.<br></p>
+    <p>Este é o parágafo de teste</p>
 </body>
 </html>
