adicionei um link

--- a/zindex.html
+++ b/zindex.html
@@ -9,6 +9,7 @@
     <p>Este é o meu segundo projeto, estarei descrevendo as actividades que realizarei durante
         o segundo dia de estagio.
          <h1>&#128522;</h1>
+          <a href="terceiro.html">acessa</a>
     </p>
    <p>
     <h4>Nome:Valéria Durão
