--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste</title>
+    <title>Hero Cosmetics</title>
 </head>
 <body>
-    <a href="zindex.html">acessa</a>
+     style="background-color: #E3B7B5;>
+    <h1 style="text-align: center; color: #4A4A4A;"></body>
+       <p style="text-align: center; color: #4A4A4A;">
+      Sua jornada para uma pele saudável começa aqui!
+    </p>
+    <h2>Brilho que encanta</h2>
+    <h3>Gloss minimalista</h3>
 
-    <h1>Relatório 45 de 2025</h1>
-    <H3>Empresa:Sdoca</H3>
-    <h3>Data:26/11/2026</h3>
-    <h3>Nome:Valéria Durão</h3>
-    <h2> Introdução</h2>
-    <p>No linux usamos o terminal pra instalar alguns aplicativos , para acessarmos algumas páginas e não só.</p>
-    <ul type="circle">
-        <li> .deb-extensão usada apenas no linux</li>
+    <img src="qt.jpeg" alt=""  width="200" height="300">
+    <h4>Coleções</h4>
+    <ul type="circle" font-family: Arial,>
+    <li>Gloss Rosé kisses</li>
+
+   <li>Gloss Red bloomm</li>
+
+   <li>Gloss Nude romance</li>
+
     </ul>
-    <h2> Instalação do git</h2>
-    <p> instalamos o git no terminal, acessamos o site do git e baixamos a versão pro linux(alguns aplicativos no linus não instala-se direito) copiamos o código do site, <br>
-    e colamos no terminal deu erro porque não executamos como administrador(para executarmos como administrador antes do código temos que usar o "sudo") depois copiarmos <br>
-    o segundo código e executamos,demos continuidade e verificamos a instalação(git -v).</p>
-   <h2>Instalação do Vs code </h2>
-   <p>Depois de irmos ao site e baixarmos o pacote de Instalação, demos continuidade na instalação no terminal.Para  instalar usamos o "cd" e a inicial da pasta em que <br>
-   se encontrava o pacote de instalação, com a pasta acessada usamos o código "dpkg -i"(código de instalação para os pacotes .deb)</p>
-    <h2>Instalação do Mysql</h2>
-    <p>copiamos o código de instalação(a partir do site) para executarmos no terminal usamos o "sudo mysql" depois de executado usamos o "show databases para nos mostrar as
-    as bases de dados existentes" por fim criamos uma base de dados usando o comando create databases.<br></p>
-    <p>Este é o parágafo de teste</p>
 </body>
 </html>
